--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --fuentePrimaria: 'Oswald', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(60deg, rgb(16, 147, 199) 0%, rgb(8, 67, 177) 100%);
+  background-attachment: fixed;
+}
+
+h1 {
+  font-family: var(--fuentePrimaria);
+  text-align: center;
+  font-weight: lighter;
+  color: white;
+  padding: 1rem 0;
+
+}
+
+.container {
+  background-color: white;
+  background-size: cover;
+  background-position: left center;
+  border-radius: 1rem;
+  padding: 2rem;
+  min-height: 80vh;
+}
+
+form, .mensajes {
+  max-width: 45rem;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+.mensajes {
+  text-align: center;
+}
+
+.resultado {
+  border: 2px solid #00b0d7;
+  padding: 2rem 0;
+}
+
+.resultado span {
+  font-weight: bold;
+}
+
+form label {
+  text-align: center;
+  font-size: 1.7 rem;
+}
+
+input[type="submit"]:disabled {
+  opacity: .2;
+  color: black;
+  transition: all .3s ease;
+}
+
+input[type="submit"]:enabled {
+  transition: all .3s ease;
 }
